# simpleGame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
scripts/: buildimgui.sh  buildme.sh  buildsfml.sh  set_versions.sh
src/: main.cpp
